fix text overflowing due to height being specified on paragraph.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,7 +102,6 @@ article p {
     background-color: var(--myLtBlue);
     border: 7px solid var(--myDkBlue);
     padding: 10px;
-    height: 130px;
 }
 
 article img {
